<resources>
    <string name="app_name">My Portfolio App</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>

    <string name="button_launch">"This button will launch my "</string>
    <string name="app">" app"</string>
</resources>
