<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myportfolioapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_nanodegree_apps"
            android:textSize="25sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <Button android:id="@+id/button_spotify_streamer"
                style="@style/ButtonTheme"
                android:text="@string/spotify_streamer" />

            <Button android:id="@+id/button_scores_app"
                style="@style/ButtonTheme"
                android:text="@string/scores_app" />

            <Button android:id="@+id/button_library_app"
                style="@style/ButtonTheme"
                android:text="@string/library_app" />

            <Button android:id="@+id/button_build_it_bigger"
                style="@style/ButtonTheme"
                android:text="@string/build_it_bigger" />

            <Button android:id="@+id/button_xyz_reader"
                style="@style/ButtonTheme"
                android:text="@string/xyz_reader" />

            <Button android:id="@+id/button_capstone_my_own_app"
                style="@style/ButtonTheme"
                android:text="@string/capstone_my_own_app" />
        </TableLayout>
    </LinearLayout>
</ScrollView>